--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "mongoose": "^8.2.0",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   }
 }
